# sqt

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: DownloadVcpkg.cmake  FindOrInstallPostgreSQL.cmake  FindOrInstallQt.cmake  ProxySettings.cmake
scripts/: README.md  README.txt  hl_json.conf
scripts/odbc/default/: hl.conf
scripts/odbc/microsoft sql/: hl.conf  version.sql
scripts/odbc/microsoft sql/content/: connection.sql  database.sql  function.sql  procedure.sql  sp_who.sql  table.sql  tables.sql  temp.sql  trigger.sql  view.sql
scripts/odbc/microsoft sql/preview/: table.sql  view.sql
scripts/odbc/microsoft sql/tree/: connection.sql  constraints.sql  database.sql  foreign keys.sql  function.sql  functions.sql  indexes.sql  logins.sql  procedure.sql  procedures.sql  role.sql  roles.sql  schemas.sql  server roles.sql  table.sql  tables.sql  triggers.sql  users.sql  view.sql  views.sql
scripts/postgres/: hl.conf  recorded_statistics.sql  statistics.sql
scripts/postgres/autocomplete/: columns.sql  objects.sql
scripts/postgres/content/: agg_function.sql  checkpoint_state.sql  cluster_initialization_state.sql  column.sql  constraint.sql  control_file_state.sql  database.sql  domain.sql  extension.sql  function.sql  functions.sql  index.sql  indexes.sql  information_schema.sql  operator.sql  operator_class.sql  operator_classes.sql  operator_families.sql  operators.sql  pg_settings.sql  pg_settings_group.sql  procedure.sql  procedures.sql  recovery_state.sql  role.sql  roles.sql  rule.sql  schema.sql  sequence.sql  sessions.sql  table.sql  tables.sql  tablespaces.sql  test_html.sql  trigger.sql  type.sql  types.sql  view.sql  views.sql
scripts/postgres/preview/: database.sql  db_locks.sql  role.sql  roles.sql  table.sql  table_locks.sql  table_stats.sql  view.sql
scripts/postgres/tree/: cluster_state.sql  connection.sql  constraints.sql  database.sql  dependent_constraints.sql  domains.sql  extensions.sql  function.sql  functions.sql  indexes.sql  information_schema.sql  operator_classes.sql  operators.sql  operators_related.sql  pg_settings.sql  procedures.sql  roles.sql  rules.sql  schema.sql  schemas_folder.sql  sequences.sql  table.sql  tables.sql  tables_folder.sql  triggers.sql  types.sql  views.sql
src/: appeventhandler.cpp  appeventhandler.h  codeeditor.cpp  codeeditor.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  copycontext.cpp  copycontext.h  datatable.cpp  datatable.h  dbconnection.cpp  dbconnection.h  dbconnectionfactory.cpp  dbconnectionfactory.h  dbobject.cpp  dbobject.h  dbobjectsmodel.cpp  dbobjectsmodel.h  dbosortfilterproxymodel.cpp  dbosortfilterproxymodel.h  dbtreeitemdelegate.cpp  dbtreeitemdelegate.h  extfiledialog.cpp  extfiledialog.h  findandreplacepanel.cpp  findandreplacepanel.h  findandreplacepanel.ui  jsonsyntaxhighlighter.cpp  jsonsyntaxhighlighter.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  misc.cpp  misc.h  odbcconnection.cpp  (+34 more)
